add: lcoal storage active tab and add translations cancelSuccess to publications add clearPublicationPlatformStates in usepublishPublication

--- a/resources/js/locales/en/publications.json
+++ b/resources/js/locales/en/publications.json
@@ -352,6 +352,7 @@
       "mediaAttached": "Media file attached successfully to '{{title}}' (Background Upload)",
       "deleteSuccess": "Publication deleted successfully!",
       "deleteError": "Error deleting publication",
+      "cancelSuccess": "Publication cancelled successfully",
       "fetchError": "Error fetching campaigns",
       "error": "An unexpected error occurred",
       "confirmDelete": {
