--- a/resources/js/locales/es/common.json
+++ b/resources/js/locales/es/common.json
@@ -93,6 +93,7 @@
     "connect": "Conectar",
     "connected": "Conectado",
     "sent": "Enviado",
+    "sending": "Enviando",
     "failed": "Fallido",
     "show_advanced": "Mostrar Avanzado",
     "hide_advanced": "Ocultar Avanzado",
