feat: add detailed activity type descriptions
- Add specific handlers for different change types (title, content, caption, etc.)

- Update Spanish translations for activity timeline

--- a/resources/js/locales/es/activity.json
+++ b/resources/js/locales/es/activity.json
@@ -26,16 +26,16 @@
         "pending": "Pendiente",
         "scheduled": "Programado",
         "draft": "Borrador",
-        "scheduled_time_changed": "Hora programada cambiada",
+        "scheduled_time_changed": "Cambió la hora programada",
         "cancelled": "Cancelado",
-        "title_changed": "Título cambiado",
-        "content_changed": "Contenido cambiado",
-        "caption_changed": "Pie de foto cambiado",
-        "scheduled_time_changed_type": "Hora programada cambiada",
-        "status_changed": "Estado cambiado",
-        "platforms_changed": "Plataformas cambiadas",
-        "media_changed": "Multimedia cambiada",
-        "hashtags_changed": "Hashtags cambiados"
+        "title_changed": "Cambió el título",
+        "content_changed": "Cambió el contenido",
+        "caption_changed": "Cambió el pie de foto",
+        "scheduled_time_changed_type": "Cambió la hora programada",
+        "status_changed": "Cambió el estado",
+        "platforms_changed": "Cambió las plataformas",
+        "media_changed": "Cambió la multimedia",
+        "hashtags_changed": "Cambió los hashtags"
       },
       "before": "Antes",
       "after": "Después",
