feat: add i18n support for reels feature
- Add English and Spanish translations for reels

- Update common translations

- Add reels configuration file

--- a/resources/js/locales/en/common.json
+++ b/resources/js/locales/en/common.json
@@ -71,6 +71,8 @@
     "platformConnect": "Platform",
     "close": "Close",
     "copy": "Copy",
+    "download": "Download",
+    "openInNewTab": "Open in new tab",
     "created": "Created",
     "creator": "Creator",
     "me": "Me",
