--- a/resources/js/locales/es/common.json
+++ b/resources/js/locales/es/common.json
@@ -73,6 +73,8 @@
     "platformConnect": "Plataforma",
     "close": "Cerrar",
     "copy": "Copiar",
+    "download": "Descargar",
+    "openInNewTab": "Abrir en nueva pestaña",
     "created": "Creado",
     "creator": "Creador",
     "me": "Yo",
