feat(i18n): add multi-language support with AI translation
- Add TranslationController for AI-powered translations

- Add UserLocaleController for user locale preferences

- Implement SetLocale middleware for automatic locale detection

- Add LanguageSwitcher component for UI language selection

- Create useLocalization hook for translation management

- Add AITranslationService for OpenAI-based translations

- Add i18n helpers and enhanced configuration

- Add English and Spanish locale files with formats

- Add localization API routes

--- a/resources/js/locales/en/common.json
+++ b/resources/js/locales/en/common.json
@@ -32,6 +32,7 @@
     "analytics": "Analytics",
     "aiChat": "AI Chat",
     "logout": "Logout",
+    "localizationExamples": "Localization Examples",
     "ai": {
       "suggest": "Suggest with AI",
       "improve": "Improve with AI",
