--- a/resources/js/locales/es/common.json
+++ b/resources/js/locales/es/common.json
@@ -34,6 +34,7 @@
     "analytics": "Analíticas",
     "aiChat": "Chat IA",
     "logout": "Cerrar Sesión",
+    "localizationExamples": "Ejemplos de Localización",
     "ai": {
       "suggest": "Sugerir con IA",
       "improve": "Mejorar con IA",
