feat(onboarding): add comprehensive onboarding UI components
- Add OnboardingFlow with step-by-step wizard

- Add PlatformCard and TemplateCard components

- Add TemplateGallery with template selection

- Add TourOverlay for guided tours

- Add OnboardingContext for state management

- Add onboarding stores with navigation support

- Add custom hooks for template integration and navigation

- Add i18n translations for onboarding (en/es)

--- a/resources/js/locales/en/onboarding.json
+++ b/resources/js/locales/en/onboarding.json
@@ -111,7 +111,13 @@
     "connecting": "Connecting...",
     "connected": "Connected",
     "connectTo": "Connect to {{platform}}",
-    "connectedAs": "Connected as {{account}}"
+    "connectedAs": "Connected as {{account}}",
+    "facebook": "Connect your Facebook pages and groups",
+    "twitter": "Share updates with your Twitter followers",
+    "instagram": "Post photos and stories to Instagram",
+    "tiktok": "Share short videos on TikTok",
+    "youtube": "Upload videos to your YouTube channel",
+    "linkedin": "Share professional content on LinkedIn"
   },
   "errors": {
     "loadFailed": "Failed to load onboarding",
